Add packages service and tests
